--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -18,10 +18,7 @@
                   <a class="nav-link active" href="/">Learnmonkey</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="//">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/programming/">Programming</a>
+                  <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="/programming/" id="navbardrop" data-toggle="dropdown">
