add installing java tutorial

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,8 @@
                     Programming
                   </a>
                   <div class="dropdown-menu">
+                    <a class="dropdown-item" href="/programming/">Programming</a>
+                    <a class="dropdown-item" href="/programming/java/">Java</a>
                     <a class="dropdown-item" href="/programming/python/">Python</a>
                     <a class="dropdown-item" href="/programming/html/">HTML</a>
                     <a class="dropdown-item" href="/programming/css/">CSS</a>
