--- a/_layouts/java.html
+++ b/_layouts/java.html
@@ -26,8 +26,8 @@
                   </a>
                   <div class="dropdown-menu">
                     <a class="dropdown-item" href="/programming/">Programming</a>
-                    <a class="dropdown-item" href="/programming/java/">Java</a>
                     <a class="dropdown-item" href="/programming/python/">Python</a>
+                    <a class="dropdown-item" href="/programming/java/">Java</a>
                     <a class="dropdown-item" href="/programming/html/">HTML</a>
                     <a class="dropdown-item" href="/programming/css/">CSS</a>
                     <a class="dropdown-item" href="/programming/javascript/">JavaScript</a>
@@ -40,8 +40,8 @@
         <!-- TODO: fix menu -->
         <aside class="bg-light" id="menu-wrapper">
             <div class="list-group list-group-flush overflow-auto vh-100">
-                <a href="/programming/python/" class="list-group-item list-group-item-action bg-light">Introduction to Python</a>
-                <a href="/programming/python/installing-python/" class="list-group-item list-group-item-action bg-light">Installing Python</a>
+                <a href="/programming/java/" class="list-group-item list-group-item-action bg-light">Introduction to Java</a>
+                <a href="/programming/java/installing-java/" class="list-group-item list-group-item-action bg-light">Installing Java</a>
             </div>
         </div>
         <footer class="bg-light text-center text-white">            
