Python and Java environment setup tutorials

--- a/_layouts/java.html
+++ b/_layouts/java.html
@@ -41,7 +41,7 @@
         <aside class="bg-light" id="menu-wrapper">
             <div class="list-group list-group-flush overflow-auto vh-100">
                 <a href="/programming/java/" class="list-group-item list-group-item-action bg-light">Introduction to Java</a>
-                <a href="/programming/java/installing-java/" class="list-group-item list-group-item-action bg-light">Installing Java</a>
+                <a href="/programming/java/environment-setup/" class="list-group-item list-group-item-action bg-light">Environment Setup</a>
             </div>
         </div>
         <footer class="bg-light text-center text-white">            
