--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -41,7 +41,7 @@
         <aside class="bg-light" id="menu-wrapper">
             <div class="list-group list-group-flush overflow-auto vh-100">
                 <a href="/programming/python/" class="list-group-item list-group-item-action bg-light">Introduction to Python</a>
-                <a href="/programming/python/installing-python/" class="list-group-item list-group-item-action bg-light">Installing Python</a>
+                <a href="/programming/python/environment-setup/" class="list-group-item list-group-item-action bg-light">Environment Setup</a>
             </div>
         </div>
         <footer class="bg-light text-center text-white">            
