--- a/_layouts/java.html
+++ b/_layouts/java.html
@@ -8,34 +8,12 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="stylesheet" href="/assets/css/style.css">
+        <script src="/assets/js/script.js"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-            <div class="container-fluid">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" href="/">Learnmonkey</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="/programming/" id="navbardrop" data-toggle="dropdown">
-                    Programming
-                  </a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/programming/">Programming</a>
-                    <a class="dropdown-item" href="/programming/python/">Python</a>
-                    <a class="dropdown-item" href="/programming/java/">Java</a>
-                    <a class="dropdown-item" href="/programming/html/">HTML</a>
-                    <a class="dropdown-item" href="/programming/css/">CSS</a>
-                    <a class="dropdown-item" href="/programming/javascript/">JavaScript</a>
-                  </div>
-                </li>
-              </ul>
-            </div>
-        </nav>
+        <nav id="nav"></nav>
         <main>{{content}}</main>
         <aside class="bg-light" id="menu-wrapper">
             <div class="list-group list-group-flush overflow-auto vh-100">
@@ -43,9 +21,5 @@
                 <a href="/programming/java/environment-setup/" class="list-group-item list-group-item-action bg-light">Environment Setup</a>
             </div>
         </div>
-        <footer class="bg-light text-center text-white">            
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                &copy; 2022 Edumonkey
-            </div>
-        </footer>
+        <footer id="footer"></footer>
     </body>
