--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -1,19 +1,8 @@
 <!doctype html>
 <html>
-    <head>
-        <title>{{ page.title }} | Edumonkey</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="/assets/css/style.css">
-        <script src="/assets/js/script.js"></script>
-    </head>
+    {%- include head.html -%}
     <body>
-        <nav id="nav"></nav>
+        {%- include nav.html -%}
         <main>{{content}}</main>
         <aside class="bg-light" id="menu-wrapper">
             <div class="list-group list-group-flush overflow-auto vh-100">
@@ -21,5 +10,5 @@
                 <a href="/programming/python/environment-setup/" class="list-group-item list-group-item-action bg-light">Environment Setup</a>
             </div>
         </div>
-        <footer id="footer"></footer>
+        {%- include footer.html -%}
     </body>
