--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,8 @@
-<footer class="bg-light text-center text-white">            
+<!-- <footer class="bg-light text-center text-white">            
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         &copy; 2022 {{site.title}}
     </div>
+</footer> -->
+<footer>
+	<h4><a href="mailto:learnmonkey2@gmail.com" class="footlink">Contact: EMail</a> | &#169;2022 Learnmonkey</h4>
 </footer>
