Brown Footer Color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,8 @@ footer {
     text-align: center;
     padding: 3px;
     background-color: rgb(37, 13, 4);
-    color: #f0e9e9;
-    opacity: 50%;
+    color: #ad0c0c;
+    opacity: 70%;
 }
 
 a.footlink {
