--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,3 +22,28 @@ a.footlink {
     text-decoration: none;
     color: #f0e9e9;
 }
+
+ul.navbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 1px solid #e7e7e7;
+    background-color: #ad0c0c;
+}
+
+li.navitem {
+    float: left;
+}
+
+li.navitem a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li.navitem a:hover {
+    color: #666;;
+}
