--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+<!-- <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
     <div class="container-fluid">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -22,4 +22,19 @@
         </li>
       </ul>
     </div>
-</nav>
+</nav> -->
+
+<ul class="navbar">
+  <li class="navitem"><a href="/">Learnmonkey</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Programming</a>
+    <div class="dropdown-content">
+      <a class="dropdown-item" href="/programming/">Programming</a>
+      <a class="dropdown-item" href="/programming/python/">Python</a>
+      <a class="dropdown-item" href="/programming/java/">Java</a>
+        <a class="dropdown-item" href="/programming/html/">HTML</a>
+        <a class="dropdown-item" href="/programming/css/">CSS</a>
+        <a class="dropdown-item" href="/programming/javascript/">JavaScript</a>
+    </div>
+  </li>
+</ul>
