change navbar color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ ul.navbar {
     padding: 0;
     overflow: hidden;
     border: 1px solid #e7e7e7;
-    background-color: #ad0c0c;
+    background-color: #745a2b;
 }
 
 li.navitem {
