--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,16 +25,18 @@
 </nav> -->
 
 <ul class="navbar">
-  <li class="navitem"><a href="/">Learnmonkey</a></li>
-  <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn">Programming</a>
+	<li class="navitem"><a href="/">Learnmonkey</a></li>
+	<div class="dropdown">
+    <button class="dropbtn">Programming
+      <i class="fa fa-caret-down"></i>
+    </button>
     <div class="dropdown-content">
-      <a class="dropdown-item" href="/programming/">Programming</a>
-      <a class="dropdown-item" href="/programming/python/">Python</a>
-      <a class="dropdown-item" href="/programming/java/">Java</a>
-        <a class="dropdown-item" href="/programming/html/">HTML</a>
-        <a class="dropdown-item" href="/programming/css/">CSS</a>
-        <a class="dropdown-item" href="/programming/javascript/">JavaScript</a>
+      <a href="/programming/">Programming</a>
+      <a href="/programming/python/">Python</a>
+      <a href="/programming/java/">Java</a>
+      <a href="/programming/html/">HTML</a>
+      <a href="/programming/css/">CSS</a>
+      <a href="/programming/javascript/">JavaScript</a>
     </div>
-  </li>
+  </div> 
 </ul>
