--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,11 +56,11 @@ ul.navbar {
   top: 0;
 }
 
-li.navbar {
+li.navitem {
   float: left;
 }
 
-li.navbar a {
+li.navitem a {
   display: block;
   color: white;
   text-align: center;
@@ -68,6 +68,6 @@ li.navbar a {
   text-decoration: none;
 }
 
-li.navbar a:hover {
+li.navitem a:hover {
   background-color: #111;
 }
