WILL IT WORK????

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,7 +24,7 @@
     </div>
 </nav> -->
 
-<ul class="navbar">
+<!-- <ul class="navbar">
 	<li class="navitem"><a href="/">Learnmonkey</a></li>
 	<div class="dropdown">
     <button class="dropbtn">Programming
@@ -39,4 +39,14 @@
       <a href="/programming/javascript/">JavaScript</a>
     </div>
   </div> 
+</ul> -->
+
+<ul class="navbar">
+	<li class="navitem"><a href="/">Learnmonkey</a></li>
+	<li class="navitem"><a href="/programming">Programming</a></li>
+	<li class="navitem"><a href="/programming/python">Python</a></li>
+	<li class="navitem"><a href="/programming/java">Java</a></li>
+	<li class="navitem"><a href="/programming/html">HTML</a></li>
+	<li class="navitem"><a href="/programming/css">CSS</a></li>
+	<li class="navitem"><a href="/programming/javascript">JavaScript</a></li>
 </ul>
