--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ ul.navbar {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #5b241c;
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
