Make learnmonkey link bold

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -42,7 +42,7 @@
 </ul> -->
 
 <ul class="navbar">
-	<li class="navitem"><a href="/">Learnmonkey</a></li>
+	<li class="navitem"><b><a href="/">Learnmonkey</a></b></li>
 	<li class="navitem"><a href="/programming">Programming</a></li>
 	<li class="navitem"><a href="/programming/python">Python</a></li>
 	<li class="navitem"><a href="/programming/java">Java</a></li>
