--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -9,6 +9,7 @@
                 <a href="/programming/python/" class="list-group-item list-group-item-action bg-light">Introduction to Python</a>
                 <a href="/programming/python/environment-setup/" class="list-group-item list-group-item-action bg-light">Environment Setup</a>
                 <a href="/programming/python/your-first-python-program/" class="list-group-item list-group-item-action bg-light">Your First Python Program</a>
+                <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
             </div>
         </div>
         {%- include footer.html -%}
