change code background color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ li.navitem a:hover {
 }
 
 code {
-    background-color: rgb(173, 173, 173);
+    background-color: #eee;
     font-size: 1em;
 }
 
