--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <!-- the site. things are the values set in the _config.yml file -->
 <footer>
     <div id="footer-icons">
-        <a href="mailto:{{site.email}}"><i class="fa fa-envelope footer-icon"></i></a>
-        <a href="https://github.com/{{site.github_username}}"><i class="fa fa-github-square footer-icon"></i></a>
+        <a href="mailto:{{site.email}}"><i class="fa fa-envelope footer-icon fa-lg"></i></a>
+        <a href="https://github.com/{{site.github_username}}"><i class="fa fa-github-square footer-icon fa-lg"></i></a>
     </div>
     <div id="footer-copyright">
         <p style="text-align: center;">&copy; 2022 {{site.title}}</p>
