--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ a.footer-link:hover {
 i.footer-icon {
     margin-left: 5px;
     margin-right: 5px;
-    color: blue !important;
+    color: white !important;
     font-size: xx-large !important;
 }
 
