close html tags in layouts

--- a/_layouts/java.html
+++ b/_layouts/java.html
@@ -9,6 +9,7 @@
                 <a href="/programming/java/" class="list-group-item list-group-item-action bg-light">Introduction to Java</a>
                 <a href="/programming/java/environment-setup/" class="list-group-item list-group-item-action bg-light">Environment Setup</a>
             </div>
-        </div>
+        </aside>
         {%- include footer.html -%}
     </body>
+</html>
