--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -11,6 +11,7 @@
                 <a href="/programming/python/your-first-python-program/" class="list-group-item list-group-item-action bg-light">Your First Python Program</a>
                 <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
             </div>
-        </div>
+        </aside>
         {%- include footer.html -%}
     </body>
+</html>
