--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -4,13 +4,50 @@
     <body>
         {%- include nav.html -%}
         <main>{{content}}</main>
-        <aside class="bg-light" id="menu-wrapper">
+        <!--<aside class="bg-light" id="menu-wrapper">
             <div class="list-group list-group-flush overflow-auto vh-100">
                 <a href="/programming/python/" class="list-group-item list-group-item-action bg-light">Introduction to Python</a>
                 <a href="/programming/python/environment-setup/" class="list-group-item list-group-item-action bg-light">Environment Setup</a>
                 <a href="/programming/python/your-first-python-program/" class="list-group-item list-group-item-action bg-light">Your First Python Program</a>
                 <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
             </div>
+        </aside>-->
+        <aside class="w3-sidebar w3-brown w3-bar-block" style="width:25%">
+            <h3 class="w3-bar-item">Menu</h3>
+            <a href="/programming/python/" class="list-group-item list-group-item-action bg-light">Introduction to Python</a>
+            <a href="/programming/python/environment-setup/" class="list-group-item list-group-item-action bg-light">Environment Setup</a>
+            <a href="/programming/python/your-first-python-program/" class="list-group-item list-group-item-action bg-light">Your First Python Program</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a><a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
+            <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
         </aside>
         {%- include footer.html -%}
     </body>
