--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -12,11 +12,16 @@
                 <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
             </div>
         </aside>-->
-        <aside class="w3-sidebar w3-brown w3-bar-block" style="width:20%">
-            <h3 style="text-align:center"; class="w3-bar-item"><b><u>Lessons</u></b></h3>
+        <!--<aside class="w3-sidebar w3-brown w3-bar-block">
+            <h3 style="text-align:center" class="w3-bar-item"><b><u>Lessons</u></b></h3>
             <a href="/programming/python/" class="w3-bar-item w3-button">Introduction to Python</a>
             <a href="/programming/python/environment-setup/" class="w3-bar-item w3-button">Environment Setup</a>
             <a href="/programming/python/your-first-python-program/" class="w3-bar-item w3-button">Your First Python Program</a>
+        </aside>-->
+        <aside id="sidebar">
+            <a href="/programming/python/">Introduction to Python</a>
+            <a href="/programming/python/environment-setup/">Environment Setup</a>
+            <a href="/programming/python/your-first-python-program/">Your First Python Program</a>
         </aside>
         {%- include footer.html -%}
     </body>
