--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,28 +1,36 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  /* 	position: fixed;
-      left: 0;
-      top: 0; */
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
+
+
+#sidebar {
+    height: 100%; /* Full-height: remove this if you want "auto" height */
+    width: 20%; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #111; /* Black */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
+    overflow-y: scroll;
+}
+
+#sidenav a {
+    padding: 6px 8px 6px 16px;
     text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+  }
+#sidenav a:hover {
+    color: #f1f1f1;
+  }
+main {
+    margin-left: 20%; 
+    padding: 0px 10px;
   }
   
-  li a:hover:not(.active) {
-    background-color: #111;
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
   }
 
 img {
