--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,44 +1,13 @@
-
-
-#sidebar {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 20%; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    left: 0;
-    background-color: #111; /* Black */
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
-    overflow-y: scroll;
+#menu-wrapper {
+    height: 10vh;
 }
-
-#sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-  }
-#sidenav a:hover {
-    color: #f1f1f1;
-  }
-main {
-    margin-left: 20%; 
-    padding: 0px 10px;
-  }
-  
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
 
 img {
     height: 200px;
 }
 
 main {
-    margin: 24%;
+    margin: 15px;
 }
 
 footer {
@@ -77,13 +46,13 @@ i.footer-icon {
     width: 100%;
 }
 
-/*ul.navbar {
+ul.navbar {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: #5b241c;
-  position: -webkit-sticky;
+  position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
 }
@@ -103,7 +72,7 @@ li.navitem a {
 li.navitem a:hover {
   color: orange;
 }
-*/
+
 code {
     background-color: #eee;
     font-size: 1em;
