--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ main {
 footer {
     text-align: center;
     padding: 3px;
+    margin-top: 500px;
     background-color: rgb(90, 63, 4);
     color: #f0e9e9;
     opacity: 75%;
