--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer>
     <div id="footer-icons">
         <a href="mailto:{{site.email}}"><i class="fa fa-envelope footer-icon"></i></a>
-        <a href="https://github.com/{{site.github_username}}"><i class="fa fa-github-square footer-icon"></i></a>
+        <a target="_blank" href="https://github.com/{{site.github_username}}"><i class="fa fa-github-square footer-icon"></i></a>
     </div>
     <div id="footer-copyright">
         <p style="text-align: center;">&copy; 2022 {{site.title}}</p>
