add under consrtuction message in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <!-- the site. things are the values set in the _config.yml file -->
+<small>Most of Learnmonkey is still under construction. If something weird happens, make sure to go on the <a href="https://github.com/learnmonkey/learnmonkey.github.io">Learnmonkey GitHub repository</a> and submit an issue.</small>
 <footer>
     <div id="footer-icons">
         <a href="mailto:{{site.email}}"><i class="fa fa-envelope footer-icon"></i></a>
