--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -12,6 +12,7 @@
                 <a href="/programming/python/more-on-printing/" class="list-group-item list-group-item-action bg-light">More on Printing</a>
                 <a href="/programming/python/variables/" class="list-group-item list-group-item-action bg-light">Variables</a>
                 <a href="/programming/python/data-types/" class="list-group-item list-group-item-action bg-light">Data Types</a>
+                <a href="/programming/python/data-types/" class="list-group-item list-group-item-action bg-light">Arithmetic</a>
             </div>
         </aside>
         {%- include footer.html -%}
