--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,8 @@ footer {
     background-color: rgb(90, 63, 4);
     color: #f0e9e9;
     opacity: 75%;
-    /* position: relative;
-    bottom: 0px; */
+    position: relative !important;
+    bottom: 0px !important; 
 }
 
 /*
