update css layout for jekyll

--- a/_layouts/css.html
+++ b/_layouts/css.html
@@ -8,6 +8,7 @@
             <div class="list-group list-group-flush overflow-auto vh-100">
                 <a href="/programming/css/" class="list-group-item list-group-item-action bg-light">Introduction to CSS</a>
                 <a href="/programming/css/setup-css/" class="list-group-item list-group-item-action bg-light">Setting Up CSS</a>
+                <a href="/programming/css/how-css-works/" class="list-group-item list-group-item-action bg-light">How CSS Works</a>
             </div>
         </aside>
         {%- include footer.html -%}
