add functions tutorial to list

--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -14,6 +14,7 @@
                 <a href="/programming/python/data-types/" class="list-group-item list-group-item-action bg-light">Data Types</a>
                 <a href="/programming/python/comments/" class="list-group-item list-group-item-action bg-light">Comments</a>
                 <a href="/programming/python/data-types/" class="list-group-item list-group-item-action bg-light">Arithmetic</a>
+                <a href="/programming/python/functions/" class="list-group-item list-group-item-action bg-light">Functions</a>
             </div>
         </aside>
         {%- include footer.html -%}
