--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,6 +17,7 @@
             <a class="dropdown-item" href="/programming/java/">Java</a>
             <a class="dropdown-item" href="/programming/html/">HTML</a>
             <a class="dropdown-item" href="/programming/css/">CSS</a>
+            <a class="dropdown-item" href="/programming/cpp/">C++</a>
             <a class="dropdown-item" href="/programming/javascript/">JavaScript</a>
           </div>
         </li>
