--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,6 @@
             <a class="dropdown-item" href="/programming/java/">Java</a>
             <a class="dropdown-item" href="/programming/html/">HTML</a>
             <a class="dropdown-item" href="/programming/css/">CSS</a>
-            <a class="dropdown-item" href="/programming/cpp/">C++</a>
             <a class="dropdown-item" href="/programming/javascript/">JavaScript</a>
           </div>
         </li>
@@ -44,10 +43,11 @@
 
 <ul class="navbar">
 	<li class="navitem"><b><a href="/">Learnmonkey</a></b></li>
-	<li class="navitem"><a href="/programming">Programming</a></li>
-	<li class="navitem"><a href="/programming/python">Python</a></li>
-	<li class="navitem"><a href="/programming/java">Java</a></li>
-	<li class="navitem"><a href="/programming/html">HTML</a></li>
-	<li class="navitem"><a href="/programming/css">CSS</a></li>
-	<li class="navitem"><a href="/programming/javascript">JavaScript</a></li>
+	<li class="navitem"><a href="/programming/">Programming</a></li>
+	<li class="navitem"><a href="/programming/python/">Python</a></li>
+	<li class="navitem"><a href="/programming/java/">Java</a></li>
+	<li class="navitem"><a href="/programming/html/">HTML</a></li>
+	<li class="navitem"><a href="/programming/css/">CSS</a></li>
+	<li class="navitem"><a href="/programming/javascript/">JavaScript</a></li>
+  <li class="navitem"><a href="/programming/cpp/">C++</a></li>
 </ul>
