--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,12 +13,12 @@ main {
 footer {
     text-align: center;
     padding: 3px;
-    margin-top: 200px;
+    margin-top: 800px;
     background-color: rgb(90, 63, 4);
     color: #f0e9e9;
     opacity: 75%;
-    position: relative !important;
-    bottom: 0px !important; 
+    /* position: relative !important;
+    bottom: 0px !important;  */
 }
 
 /*
