--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<!--<footer>
     <div id="footer-icons">
         <a href="mailto:{{site.email}}"><i class="fa fa-envelope footer-icon"></i></a>
         <a target="_blank" href="https://github.com/{{site.github_username}}"><i class="fa fa-github-square footer-icon"></i></a>
@@ -6,4 +6,25 @@
     <div id="footer-copyright">
         <p style="text-align: center;">&copy; 2022 {{site.title}}</p>
     </div>
-</footer>
+</footer>-->
+
+<footer class="pt-4 my-md-5 pt-md-5 border-top">
+    <div class="row">
+      <div class="col-12 col-md">
+        <img class="mb-2" src="/logo.png" alt="Learnmonkey Logo" width="24" height="24">
+        <p class="d-block mb-3 text-muted">&copy; 2022</p>
+      </div>
+      <div class="col-6 col-md">
+        <h5>Programming</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="text-muted" href="/programming/python/">Python</a></li>          
+          <li><a class="text-muted" href="/programming/html/">HTML</a></li>
+          <li><a class="text-muted" href="/programming/css/">CSS</a></li>
+          <li><a class="text-muted" href="/programming/javascript/">JavaScript</a></li>
+          <li><a class="text-muted" href="/programming/cpp/">C++</a></li>
+          <li><a class="text-muted" href="/programming/java/">Java</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+</div>
