--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,9 +11,9 @@ main {
 }
 
 footer {
-    text-align: center;
+    /*text-align: center;
     padding: 3px;
-    margin-top: 800px;
+    margin-top: 800px;*/
     background-color: rgb(90, 63, 4);
     color: #f0e9e9;
     opacity: 75%;
