logo style height and width

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,8 @@
 <footer class="pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
       <div class="col-12 col-md">
-        <img class="mb-2" src="/logo.png" alt="Learnmonkey Logo" width="24" height="24">
+          !-- class="mb-2" -->
+        <img src="/logo.png" alt="Learnmonkey Logo" style="width:100px;height:100px;">
         <p class="d-block mb-3 text-muted">&copy; 2022</p>
       </div>
       <div class="col-6 col-md">
