--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,18 +7,26 @@ img {
 }
 
 main {
-    margin: 15px;
+    margin-bottom: auto;
+    display: block;
 }
 
 footer {
     /*text-align: center;
     padding: 3px;
-    margin-top: 800px;*/
+    margin-top: 800px;
     background-color: rgb(90, 63, 4);
     color: #f0e9e9;
     opacity: 75%;
-    /* position: relative !important;
-    bottom: 0px !important;  */
+    margin-top: auto;
+    display: block;
+    width: 100% !important;
+    position: relative !important;
+    bottom: 0px !important;*/
+    background-color: rgb(90, 63, 4);
+    color: #f0e9e9;
+    opacity: 75%;
+    width: 100% !important;
 }
 
 /*
@@ -74,6 +82,19 @@ li.navitem a {
 
 li.navitem a:hover {
   color: orange;
+}
+
+ul#tutorials-list {
+    list-style-type: none; /* Remove bullets */
+    padding: 0; /* Remove padding */
+    margin: 0; /* Remove margins */
+  }
+  
+ul#tutorials-list li {
+    border: 1px solid #ddd; /* Add a thin border to each list item */
+    margin-top: -1px; /* Prevent double borders */
+    background-color: #f6f6f6; /* Add a grey background color */
+    padding: 12px; /* Add some padding */
 }
 
 code {
