--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -18,14 +18,14 @@
             </div>
         </aside>-->
         <ul id="tutorials-list">
-              <li><a href="/programming/python/">Introduction to Python</a></li>
-              <li><a href="/programming/python/environment-setup/">Environment Setup</a></li>
-              <li><a href="/programming/python/your-first-python-program/">Your First Python Program</a></li>
-              <li><a href="/programming/python/variables/">Variables</a></li>
-              <li><a href="/programming/python/data-types/">Data Types</a></li>
-              <li><a href="/programming/python/comments/">Comments</a></li>
-              <li><a href="/programming/python/arithmetic/">Arithmetic</a></li>
-              <li><a href="/programming/python/functions/">Functions</a></li>
+              <a href="/programming/python/"><li>Introduction to Python</li></a>
+              <a href="/programming/python/environment-setup/"><li>Environment Setup</li></a
+              <a href="/programming/python/your-first-python-program/"><li>Your First Python Program</li></a
+              <a href="/programming/python/variables/"><li>Variables</li></a
+              <a href="/programming/python/data-types/"><li>Data Types</li></a
+              <a href="/programming/python/comments/"><li>Comments</li></a>
+              <a href="/programming/python/arithmetic/"><li>Arithmetic</li></a>
+              <a href="/programming/python/functions/"><li>Functions</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
