whoop! typo fix :(

--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -21,8 +21,8 @@
               <a href="/programming/python/"><li>Introduction to Python</li></a>
               <a href="/programming/python/environment-setup/"><li>Environment Setup</li></a
               <a href="/programming/python/your-first-python-program/"><li>Your First Python Program</li></a
-              <a href="/programming/python/variables/"><li>Variables</li></a
-              <a href="/programming/python/data-types/"><li>Data Types</li></a
+              <a href="/programming/python/variables/"><li>Variables</li></a>
+              <a href="/programming/python/data-types/"><li>Data Types</li></a>
               <a href="/programming/python/comments/"><li>Comments</li></a>
               <a href="/programming/python/arithmetic/"><li>Arithmetic</li></a>
               <a href="/programming/python/functions/"><li>Functions</li></a>
