--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,8 +21,8 @@ footer {
     margin-top: auto;
     display: block;
     width: 100% !important;
-    position: relative !important;
-    bottom: 0px !important;*/
+    position: relative !important;*/
+    bottom: 0px !important;
     background-color: rgb(90, 63, 4);
     color: #f0e9e9;
     opacity: 75%;
