--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/assets/css/style.css">
     <script src="/assets/js/script.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
     <link rel="icon" type="image/x-icon" href="/logo.png">
 </head>
