--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div id="footer-icons">
-        <a href="mailto:{{site.email}}"><i class="fas fa-envelope footer-icon"></i></a>
-        <a target="_blank" href="https://github.com/{{site.github_username}}"><i class="fab fa-github-square footer-icon"></i></a>
+        <a href="mailto:{{site.email}}"><i class="fas fa-envelope footer-icon fa-2x"></i></a>
+        <a target="_blank" href="https://github.com/{{site.github_username}}"><i class="fab fa-github-square footer-icon fa-2x"></i></a>
     </div>
     <div id="footer-copyright">
         <p style="text-align: center;">&copy; 2022 {{site.title}}</p>
