--- a/_layouts/html.html
+++ b/_layouts/html.html
@@ -5,9 +5,10 @@
         {%- include nav.html -%}
         <main>{{content}}</main>
         <ul id="tutorials-list">
-            <a href="/programming/java/"><li>Introduction to Java</li></a>
-            <a href="/programming/css/environment-setup/"><li>Environment Setup</li></a>
-      </ul>
+              <a href="/programming/html/"><li>Introduction to HTML</li></a>
+              <a href="/programming/html/your-first-html-website/"><li>Your First HTML Website</li></a>
+        </ul>
         {%- include footer.html -%}
     </body>
 </html>
+
