--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,49 +1,6 @@
-<!-- <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-    <div class="container-fluid">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" href="/">Learnmonkey</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="/programming/" id="navbardrop" data-toggle="dropdown">
-            Programming
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="/programming/">Programming</a>
-            <a class="dropdown-item" href="/programming/python/">Python</a>
-            <a class="dropdown-item" href="/programming/java/">Java</a>
-            <a class="dropdown-item" href="/programming/html/">HTML</a>
-            <a class="dropdown-item" href="/programming/css/">CSS</a>
-            <a class="dropdown-item" href="/programming/javascript/">JavaScript</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-</nav> -->
-
-<!-- <ul class="navbar">
-	<li class="navitem"><a href="/">Learnmonkey</a></li>
-	<div class="dropdown">
-    <button class="dropbtn">Programming
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="/programming/">Programming</a>
-      <a href="/programming/python/">Python</a>
-      <a href="/programming/java/">Java</a>
-      <a href="/programming/html/">HTML</a>
-      <a href="/programming/css/">CSS</a>
-      <a href="/programming/javascript/">JavaScript</a>
-    </div>
-  </div> 
-</ul> -->
-
 <ul class="navbar">
 	<li class="navitem"><b><a href="/">Learnmonkey</a></b></li>
-	<li class="navitem"><a href="/programming/">Programming</a></li>
+	<li class="navitem"><a href="/about">About</a></li>
 	<li class="navitem"><a href="/programming/python/">Python</a></li>
 	<li class="navitem"><a href="/programming/java/">Java</a></li>
 	<li class="navitem"><a href="/programming/html/">HTML</a></li>
