--- a/_layouts/flask.html
+++ b/_layouts/flask.html
@@ -6,6 +6,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/programming/python/flask/"><li>Introduction to Flask</li></a>
+              <a href="/programming/python/flask/setup/"><li>Setup</li></a>
               <a href="/programming/python/flask/your-first-flask-website/"><li>Your First Flask Website</li></a>
         </ul>
         {%- include footer.html -%}
