add article to article list

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -6,6 +6,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/programming/articles/interpreters-and-compilers/"><li>Interpreters and Compilers</li></a>
+              <a href="/programming/articles/editing-code/"><li>Editing Code</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
