add tutorial index to navbar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,6 @@
 <ul class="navbar">
 	<li class="navitem"><b><a href="/">Learnmonkey</a></b></li>
+	<li class="navitem"><a href="/tutorial-index/">Tutorials</a></li>
 	<li class="navitem"><a href="/about">About</a></li>
 	<li class="navitem"><a href="/programming/python/">Python</a></li>
 	<li class="navitem"><a href="/programming/java/">Java</a></li>
