--- a/_layouts/pygame.html
+++ b/_layouts/pygame.html
@@ -6,6 +6,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/programming/python/pygame/"><li>Introduction to Pygame</li></a>
+              <a href="/programming/python/pygame/setup/"><li>Setup Pygame</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
