--- a/_layouts/pygame.html
+++ b/_layouts/pygame.html
@@ -7,6 +7,7 @@
         <ul id="tutorials-list">
               <a href="/programming/python/pygame/"><li>Introduction to Pygame</li></a>
               <a href="/programming/python/pygame/setup/"><li>Setup</li></a>
+              <a href="/programming/python/pygame/your-first-pygame-game/"><li>Your First Pygame Game</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
