make new page on drawing to the window

--- a/_layouts/pygame.html
+++ b/_layouts/pygame.html
@@ -8,6 +8,7 @@
               <a href="/programming/python/pygame/"><li>Introduction to Pygame</li></a>
               <a href="/programming/python/pygame/setup/"><li>Setup Pygame</li></a>
               <a href="/programming/python/pygame/your-first-pygame-game/"><li>Your First Pygame Game</li></a>
+              <a href="/programming/python/pygame/drawing-to-the-window/"><li>Drawing To The Window</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
