add article to list

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -7,6 +7,7 @@
         <ul id="tutorials-list">
               <a href="/programming/articles/interpreters-and-compilers/"><li>Interpreters and Compilers</li></a>
               <a href="/programming/articles/editing-code/"><li>Editing Code</li></a>
+              <a href="/programming/articles/what-programming-language-should-i-learn/"><li>What Programming Language Should I Learn?</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
