new language go

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,4 +8,5 @@
 	<li class="navitem"><a href="/programming/css/">CSS</a></li>
 	<li class="navitem"><a href="/programming/javascript/">JavaScript</a></li>
   	<li class="navitem"><a href="/programming/cpp/">C++</a></li>
+  	<li class="navitem"><a href="/programming/golang/">Go</a></li>
 </ul>
