--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -6,6 +6,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/programming/golang/"><li>Introduction to Go</li></a>
+              <a href="/programming/golang/environment-setup/"><li>Environment Setup</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
