--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html lang="en">
+<link rel="stylesheet" href="/path/to/styles/default.min.css">
+<script src="/path/to/highlight.min.js"></script>
+<script>hljs.highlightAll();</script>
     {%- include head.html -%}
     <body>
         {%- include nav.html -%}
