add github intro to layout list

--- a/_layouts/git.html
+++ b/_layouts/git.html
@@ -6,6 +6,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/programming/git/"><li>Introduction to Git</li></a>
+              <a href="/programming/git/github/"><li>Introduction to GitHub</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
