new tutorial: go data types

--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -13,6 +13,7 @@
               <a href="/programming/golang/your-first-go-program/"><li>Your First Go Program</li></a>
               <a href="/programming/golang/printing/"><li>Printing</li></a>
               <a href="/programming/golang/variables/"><li>Variables</li></a>
+              <a href="/programming/golang/data-types/"><li>Data Types</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
