go functions page create

--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -14,6 +14,7 @@
               <a href="/programming/golang/variables/"><li>Variables</li></a>
               <a href="/programming/golang/data-types/"><li>Data Types</li></a>
               <a href="/programming/golang/more-on-printing/"><li>More on Printing</li></a>
+              <a href="/programming/golang/functions/"><li>Functions</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
