add constants tutorial to list

--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -13,6 +13,7 @@
               <a href="/programming/golang/your-first-go-program/"><li>Your First Go Program</li></a>
               <a href="/programming/golang/variables/"><li>Variables</li></a>
               <a href="/programming/golang/data-types/"><li>Data Types</li></a>
+              <a href="/programming/golang/constants/"><li>Constants</li></a>
               <a href="/programming/golang/more-on-printing/"><li>More on Printing</li></a>
               <a href="/programming/golang/functions/"><li>Functions</li></a>
         </ul>
