--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
-<link rel="stylesheet" href="/path/to/styles/default.min.css">
-<script src="/path/to/highlight.min.js"></script>
+<link rel="stylesheet" href="https://simiancdn.github.io/highlight/styles/dark.min.css">
+<script src="https://simiancdn.github.io/highlight/highlight.min.js"></script>
 <script>hljs.highlightAll();</script>
     {%- include head.html -%}
     <body>
