--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,4 +10,5 @@
   	<li class="navitem"><a href="/programming/cpp/">C++</a></li>
 	<li class="navitem"><a href="/programming/java/">Java</a></li>
 	<li class="navitem"><a onclick="switchDark()" id="toggledarklight">Toggle Dark</a></li>
+	<li class="navitem"><a onclick="switchLight()" id="toggledarklight2">Toggle Dark</a></li>
 </ul>
