--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,3 +146,13 @@ footer a.footer-link:hover {
     cursor: pointer;
     text-decoration: underline;
 }
+
+#toggledarklight2 {
+  color: white;
+  text-decoration: none;
+}
+
+#toggledarklight2:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
