Add if/else and switch tutorials to list

--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -15,6 +15,8 @@
               <a href="/programming/golang/comments/"><li>Comments</li></a>
               <a href="/programming/golang/more-on-printing/"><li>More on Printing</li></a>
               <a href="/programming/golang/functions/"><li>Functions</li></a>
+              <a href="/programming/golang/if-else/"><li>If/Else</li></a>
+              <a href="/programming/golang/switch/"><li>Switch</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
