maybe fix hljs...

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,7 @@
     <link rel="icon" type="image/x-icon" href="/images/logo.png">
     <link rel="stylesheet" href="https://simiancdn.github.io/highlight/styles/dark.min.css">
     <script src="https://simiancdn.github.io/highlight/highlight.min.js"></script>
+    <link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"></script>
 </head>
