put arithmetic stuff in arithmetic operators page

--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -11,7 +11,7 @@
               <a href="/programming/golang/variables/"><li>Variables</li></a>
               <a href="/programming/golang/data-types/"><li>Data Types</li></a>
               <a href="/programming/golang/constants/"><li>Constants</li></a>
-              <a href="/programming/golang/arithmetic/"><li>Arithmetic</li></a>
+              <a href="/programming/golang/operators/"><li>Operators</li></a>
               <a href="/programming/golang/comments/"><li>Comments</li></a>
               <a href="/programming/golang/more-on-printing/"><li>More on Printing</li></a>
               <a href="/programming/golang/functions/"><li>Functions</li></a>
